# pjecz-hercules-api-key

./: .gcloudignore  .gitignore  README.md  app.yaml  pyproject.toml
.github/workflows/: gcloud-app-deploy.yml
config/: settings.py
hercules/: app.py
hercules/core/modulos/: models.py
hercules/core/permisos/: models.py
hercules/core/roles/: models.py
hercules/core/usuarios/: models.py
hercules/core/usuarios_roles/: models.py
hercules/core/web_paginas/: models.py
hercules/core/web_ramas/: models.py
hercules/v4/modulos/: crud.py  paths.py  schemas.py
hercules/v4/permisos/: crud.py  paths.py  schemas.py
hercules/v4/roles/: crud.py  paths.py  schemas.py
hercules/v4/usuarios/: authentications.py  crud.py  paths.py  schemas.py
hercules/v4/usuarios_roles/: crud.py  paths.py  schemas.py
hercules/v4/web_paginas/: crud.py  paths.py  schemas.py
hercules/v4/web_ramas/: crud.py  paths.py  schemas.py
lib/: database.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  hashids.py  universal_mixin.py
pjecz_hercules_api_key/: main.py  settings.py
pjecz_hercules_api_key/config/: settings.py
pjecz_hercules_api_key/dependencies/: authentications.py  database.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  hashids.py  safe_string.py  schemas_base.py  universal_mixin.py
pjecz_hercules_api_key/models/: autoridades.py  distritos.py  edictos.py  estados.py  exh_areas.py  exh_exhortos.py  exh_exhortos_archivos.py  exh_exhortos_partes.py  exh_tipos_diligencias.py  listas_de_acuerdos.py  materias.py  materias_tipos_juicios.py  modulos.py  municipios.py  permisos.py  roles.py  sentencias.py  usuarios.py  usuarios_roles.py  web_paginas.py  web_ramas.py
pjecz_hercules_api_key/routers/: autoridades.py  distritos.py  edictos.py  exh_exhortos.py  listas_de_acuerdos.py  materias.py  materias_tipos_juicios.py  modulos.py  municipios.py  permisos.py  roles.py  sentencias.py  usuarios.py  usuarios_roles.py  web_paginas.py  web_ramas.py
pjecz_hercules_api_key/schemas/: autoridades.py  distritos.py  edictos.py  exh_exhortos.py  exh_exhortos_archivos.py  exh_exhortos_partes.py  listas_de_acuerdos.py  materias.py  materias_tipos_juicios.py  modulos.py  municipios.py  permisos.py  roles.py  sentencias.py  usuarios.py  usuarios_roles.py  web_paginas.py  web_ramas.py
tests/: README.md  __init__.py  load_env.py  test_autoridades.py  test_distritos.py  test_edictos.py  test_exh_exhortos.py  test_listas_de_acuerdos.py  test_materias.py  test_materias_tipos_juicios.py  test_modulos.py  test_permisos.py  test_roles.py  test_sentencias.py  test_usuarios.py  test_usuarios_roles.py  test_web_paginas.py  test_web_ramas.py
