[tool.poetry]
name = "pjecz-hercules-api-key"
version = "0.1.0"
description = "API con autentificación para construir el sitio web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.0"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
pytz = "^2024.1"
unidecode = "^1.3.8"
uvicorn = "^0.30.6"
fastapi = {extras = ["sqlalchemy"], version = "^0.112.2"}
fastapi-pagination = "^0.12.26"
sqlalchemy = "^2.0.33"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.9"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
google-auth = "^2.34.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.20.2"
google-cloud-storage = "^2.18.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
faker = "^28.1.0"
isort = "^5.13.2"
poetry-plugin-export = "^1.8.0"
pre-commit = "^3.8.0"
pylint = "^3.2.7"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
