[project]
name = "pjecz-hercules-api-key"
version = "5.0.0"
description = "PJECZ API key de Plataforma Web"
authors = [
    {name = "Guillermo Valdes",email = "guillermo@movimientolibre.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cryptography (>=44.0.0,<45.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "fastapi-pagination[sqlalchemy] (>=0.12.34,<0.13.0)",
    "google-auth (>=2.37.0,<3.0.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "google-cloud-secret-manager (>=2.22.1,<3.0.0)",
    "google-cloud-storage (>=2.19.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "hashids (>=1.3.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
faker = "^33.3.1"
isort = "^5.13.2"
pre-commit = "^4.1.0"
pylint = "^3.3.3"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.4"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
