[tool.poetry]
name = "pjecz-hercules-api-key"
version = "0.1.0"
description = "API con autentificación para consultar la base de datos Plataforma Web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^45.0.6"
fastapi = "^0.116.1"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.13.3"}
google-auth = "^2.40.3"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.24.0"
google-cloud-storage = "^3.3.0"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
pytz = "^2025.2"
sqlalchemy = "^2.0.43"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.4.0"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
faker = "^37.5.3"
isort = "^6.0.1"
pre-commit = "^4.3.0"
pylint = "^3.3.8"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.4.1"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
